# wuziqi2020

./: .bash_history  .gitignore  2019081305008-方梓成.doc  2019081309018.doc  AI.cpp  AI.h  CMakeLists.txt  Check_win.h  C语言.doc  Draw.cpp  Draw.h  Game.cpp  Game.h  Gamerun.cpp  Gamerun.h  GoBang.pro  GoBang.vcxproj  GoBang.vcxproj.filters  Gomoku.cpp  In_Game.h  LICENSE  Main.cpp  Main.h  Mouse_Event.h  MyGobang.pro  QtGuiApplication2.cpp  QtGuiApplication2.h  QtGuiApplication2.qrc  QtGuiApplication2.ui  README.md  ReportOfZhaoHongyang.doc  Score_Config.h  Set_graph.h  Window.cpp  Window.h  ai.cpp  ai.h  alphabeta.cpp  alphabeta.h  bign.h  (+94 more)
.github/workflows/: macos.yml  windows.yml
Debug/: C_Debug.ilk  five-in-a-row.ilk  vc142.idb  wuziqi_C_Debug.ilk  wuziqi_Judge.exp  wuziqi_Judge.ilk  wuziqi_Robot.exp  wuziqi_Robot.ilk
Debug/five-in-a-row.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  five-in-a-row.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FiveChess/: AI.h  Board.h  CMakeLists.txt  FiveChess.c  main.c
GE_data_generator/: Module1.vb
Mygobang/: .gitignore  AI.cpp  AI.h  CMakeLists.txt  CaculateSinglePointTest.cpp  chessboard.cpp  chessboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  实验报告.doc
Project/: GameModel.cpp  GameModel.h  GoBang.pro  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
boradtry/: CMakeLists.txt  Gametype.cpp  Gametype.h  mainwindow.cpp  mainwindow.h
chessAIUPD/: CMakeLists.txt  alphabeta.h  analysis_kill.cpp  analysis_kill.h  board.cpp  board.h  chess_button.cpp  chess_button.h  chess_init_type.h  chessglobalconst.h  chessglobalvariable.h  main.cpp
code/: Checkerboard.cpp  Checkerboard.h  ChessAI.cpp  ChessAI.h  Player.cpp  Player.h  code.sln  源.cpp
code/Debug/: code.ilk
code/code/: DeepSearch.cpp  DeepSearch.h  board.cpp  board.h  code.cpp  code.vcxproj  code.vcxproj.filters  define_var.h  evalute.cpp  evalute.h  finnal.cpp  finnal.h  generator.cpp  generator.h
code_2/code_2/: code_2.sln
code_tools/GE_data_generator/: GE_data_generator.sln  Module1.vb
gobang/: gobang.sln
gobang/Debug/: gobang.ilk
gobang/gobang/: Data.cpp  data.h  evaluate.cpp  evaluate.h  gobang.vcxproj  gobang.vcxproj.filters  init.cpp  init.h  main.cpp
gomoku/: gomoku.sln
gomoku/Debug/: gomoku.ilk
gomoku/gomoku/: Checkerboard.h  ChessAI.cpp  ChessAI.h  Player.cpp  Player.h  gomoku.vcxproj  gomoku.vcxproj.filters
wuziqi/Project1/: AI.cpp  function.cpp  wuziqi.h  wuziqi1.cpp
wuziqi/Wuziqi_jiejuefangan/: Wuziqi_jiejuefangan.sln
wuziqi2020/: CMakeLists.txt  draw.cpp  draw.hpp  func.hpp  getPosition.cpp  interface.cpp  math.cpp  myfun.cpp  test.cpp  实验报告2019081305025严瑞.doc
wuziqi5/: wuziqi5.sln  标准实验报告_黄琬景.doc
wuziqi5/Debug/: wuziqi5.ilk
wuziqi5/wuziqi5/: ChessBoard.cpp  Game.h  ReadMe.txt  chessboard.h  resource.h  stdafx.cpp  stdafx.h  wuziqi5.cpp  wuziqi5.rc  wuziqi5.vcxproj  wuziqi5.vcxproj.filters
wuziqi_C_Debug/: C_Debug.c  C_Debug.vcxproj  C_Debug.vcxproj.filters
wuziqi_C_Debug/Debug/: vc142.idb
wuziqi_GE_data_generator/: wuziqi_GE_data_generator.vbproj
wuziqi_GUI/: ChessBoard.vb  FormMain.Designer.vb  FormMain.vb  README.md  RobotController.vb  chessboard.Designer.vb  chessboard.resx  wuziqi_GUI.vbproj
wuziqi_GUI/wuziqi_GUI/: FormMain.Designer.vb  (+2 more)
wuziqi_Judge/: Source.def  check.c  dllmain.c  wuziqi_Judge.sln  wuziqi_Judge.vcxproj  wuziqi_Judge.vcxproj.filters
wuziqi_Robot/: GameEngine.c  GameEngine.h  GlobalEvaluation.c  GlobalEvaluation.h  MaxMinSearch.c  MaxMinSearch.h  ScoreEvaluate.c  ScoreEvaluate.h  Source.def  TupleFive.c  TupleFive.h  UnitTest.c  UnitTest.h  cpp.hint  dllmain.c  wuziqi_Robot.sln  wuziqi_Robot.vcxproj  wuziqi_Robot.vcxproj.filters
wuziqi_Robot_Clion/: CMakeLists.txt  library.h
五子棋实验/: 伍棱铖2019081304019 程序设计实验报告.doc
(+163 files in other folders)
